Fixes #5314: Display content of popup with overflow if needed

--- a/rudder-web/src/main/webapp/style/rudder.css
+++ b/rudder-web/src/main/webapp/style/rudder.css
@@ -2654,4 +2654,6 @@ fieldset {
   list-style-type: disc;
 }
 
+.simplemodal-wrap{
+	overflow:auto !important
 }
